--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -45,6 +45,7 @@
 		{% for page in site.pages %}
 			<a href="{{ page.url | relative_url }}" target="_self">{{ page.title }}</a>
 		{% endfor %}
+		<a href="https://www.iubenda.com/privacy-policy/68771509">Privacy Policy</a>
 		{% if site.presskit_download_link %}
 			<a href="{{ site.presskit_download_link }}">Press Kit</a>
 		{% endif %}
